# data-quality-tools

./: .gitignore  README.md  requirements.txt  setup.cfg  tasks.py
docs/cheat_sheets/: argparse_cheat_sheet.md  pydantic_cheat_sheet.md
ext/: dbf2csv.py
src/globals/: constants.py  interfaces.py  types.py
src/logger/: config_logger.py  utils.py
src/main/: main.py
src/manager/: arguments.py  manager.py
src/manager/models/: documentation.py  input_interface.py  manager_arguments.py  manager_request.py  manager_response.py  output_interface.py  user_request.py  user_response.py
src/tools/: base_tool.py  base_tool_arguments.py
src/tools/base_result_generator/: base_generator.py
src/tools/base_snapshot/: base_snapshot.py
src/tools/data_consistency_inspector/: arguments.py  constants.py  data_consistency_inspector.py
src/tools/null_value_inspector/: arguments.py  constants.py  null_value_inspector.py
src/utils/: consistency_check.py  dict_operations.py  file_operations.py  plot_operations.py  statistics.py  str_operations.py
tests/integration_tests/null_value_inspector/: documentation_subset_mode.txt  null_value_inspector_test.py  test1.csv  test3.csv
tests/integration_tests/tools/: data_consistency_inspector_test.py  documentation.txt  documentation_dci.txt  documentation_dci_subset_mode.txt  null_value_inspector_test.py  test2.csv
tests/main/: main_test.py
tests/manager/models/: input_interface_test.py  manager_request_test.py  output_interface_test.py  user_manager_input_interface_test.py  (+3 more)
tests/utils/: mocks.py  statistics_test.py
(+52 files in other folders)
