[metadata]
name = data-quality-tools
version = 0.0.1
author = Artur Assis Alves
url = https://github.com/ArturAssisComp/data-quality-tools
author_email = arturassiscomp@gmail.com
description = Toolkit for assessing and reporting on the quality of structured data..
long_description = file: README.md, LICENSE
keywords = data-quality, tools, CLI
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.11

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*

[options.entry_points]
console_scripts =
    data-quality-tools = main.main:main
    dqt = main.main:main
